update vm arguments